<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_categoria" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_data" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_valor"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_login_button"
            android:text="@string/btnCadastrar"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />


    </LinearLayout>

</LinearLayout>